# bwoc-mcp

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/: PLAN.md
mcpb/: manifest.json
notes/: 2026-06-22_mcpb-desktop-extension.md  2026-06-22_tool-annotations-and-directory.md  2026-06-23_first-stable-releases.md
scripts/: build-mcpb.sh
src/: cli.rs  main.rs  server.rs
src/bridge/: core.rs  mod.rs  shell.rs
src/transport/: http.rs  mod.rs
tests/: stdio_smoke.rs
